changes in header incomplete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Portafolio</h1>
-    <h2>Juan Jose Florez Rendon</h2>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
+    <title>Juan Rendon Dev</title>
+  </head>
+
+  <header>
+    <div class="ingles-icon">ES</div>
+    <div class="items-nav-redirects">
+      <a href="#sobreMi">Sobre mí</a>
+      <a href="#hojaDeVida">Hoja de vida</a>
+      <a href="#portafolio">Portafolio</a>
+      <a href="#contactame">Contáctame</a>
+    </div>
+    <div class="dark-mode-icon" onclick="toggleDarkMode()">🌓</div>
+  </header>
+
+  <body>
+    <section class="introduccion-container">
+
+    </section>
+    
+    <script src="/js/dark-mode.js"></script>    
+  </body>
 </html>
