Header almost terminated

--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="icon" href="/img/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,23 +16,27 @@
   </head>
   <header>
     <div class="ingles-icon">
-      <img src="img/espana.png" alt="Español" class="bandera-idioma"/>
-      <a href="/redirects/indexRedirect.html"> 
-        <img src="img/idioma.png" alt="Cambiar lenguaje" class="change-languaje">
+      <img src="/img/estados-unidos.png" alt="Ingles" class="bandera-idioma" />
+      <a href="/index.html">
+        <img
+          src="/img/idioma.png"
+          alt="Change languaje"
+          class="change-languaje"
+        />
       </a>
     </div>
 
     <div class="items-nav-redirects">
       <div class="nav-links">
-        <a href="#sobreMi">Sobre mí</a>
-        <a href="#hojaDeVida">Hoja de vida</a>
-        <a href="#portafolio">Portafolio</a>
-        <a href="#contactame">Contáctame</a>
+        <a href="#sobreMi">About me</a>
+        <a href="#hojaDeVida">Curriculum vitae</a>
+        <a href="#portafolio">Portfolio</a>
+        <a href="#contactame">Contact me</a>
       </div>
     </div>
 
     <div class="dark-mode-icon">
-      <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
+      <img src="/img/luna.png" alt="Dark Mode" class="moon-icon" />
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
