Header and navbar terminated

--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="icon" href="img/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <title>Juan Rendon Dev</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <script defer src="/js/dark-mode.js"></script>
-  </head>
-  <header>
+    <title>Juan Rendon Dev</title>
+</head>
+<header>
     <div class="ingles-icon">
-      <img src="img/espana.png" alt="Español" class="bandera-idioma"/>
-      <a href="/redirects/indexRedirect.html"> 
-        <img src="img/idioma.png" alt="Cambiar lenguaje" class="change-languaje">
-      </a>
+        <img src="img/espana.png" alt="Español" class="bandera-idioma" />
+        <a href="/redirects/indexRedirect.html">
+            <img src="img/idioma.png" alt="Cambiar lenguaje" class="change-languaje" />
+        </a>
     </div>
 
-    <div class="items-nav-redirects">
-      <div class="nav-links">
+    <div class="nav-links">
         <a href="#sobreMi">Sobre mí</a>
         <a href="#hojaDeVida">Hoja de vida</a>
         <a href="#portafolio">Portafolio</a>
         <a href="#contactame">Contáctame</a>
-      </div>
+        <div id="indicator" class="indicator-bar"></div>
     </div>
 
     <div class="dark-mode-icon">
-      <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
-      <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
+        <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
+        <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
-  </header>
-  
-  <body>
-    <section class="introduccion-container">
+</header>
+<body>
+    <section>
 
     </section>
-  </body>
+    <script defer src="js/app.js"></script>
+</body>
 </html>
