--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Juan Rendon Dev</title>
     <script defer src="/js/dark-mode.js"></script>
+    <title>Juan Rendon Dev</title>
   </head>
   <header>
     <div class="ingles-icon">
@@ -32,6 +32,7 @@
         <a href="#hojaDeVida">Curriculum vitae</a>
         <a href="#portafolio">Portfolio</a>
         <a href="#contactame">Contact me</a>
+        <div id="indicator" class="indicator-bar"></div>
       </div>
     </div>
 
@@ -40,10 +41,9 @@
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
-  
-  <body>
-    <section class="introduccion-container">
 
-    </section>
+  <body>
+    <section class="introduccion-container"></section>
+    <script defer src="/js/app.js"></script>
   </body>
 </html>
