change name file

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </header>
 <body>
     <section>
-
+        
     </section>
-    <script defer src="js/app.js"></script>
+    <script defer src="js/indicator-navbar.js"></script>
 </body>
 </html>
