--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -44,6 +44,6 @@
 
   <body>
     <section class="introduccion-container"></section>
-    <script defer src="/js/app.js"></script>
+    <script defer src="/js/indicator-navbar.js"></script>
   </body>
 </html>
