--- a/index.html
+++ b/index.html
@@ -1,41 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="icon" href="img/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="/js/dark-mode.js"></script>
     <title>Juan Rendon Dev</title>
-</head>
-<header>
+  </head>
+  <header>
     <div class="ingles-icon">
-        <img src="img/espana.png" alt="Español" class="bandera-idioma" />
-        <a href="/redirects/indexRedirect.html">
-            <img src="img/idioma.png" alt="Cambiar lenguaje" class="change-languaje" />
-        </a>
+      <img src="img/espana.png" alt="Español" class="bandera-idioma" />
+      <a href="/redirects/indexRedirect.html">
+        <img
+          src="img/idioma.png"
+          alt="Cambiar lenguaje"
+          class="change-languaje"
+        />
+      </a>
     </div>
 
     <div class="nav-links">
-        <a href="#sobreMi">Sobre mí</a>
-        <a href="#hojaDeVida">Hoja de vida</a>
-        <a href="#portafolio">Portafolio</a>
-        <a href="#contactame">Contáctame</a>
-        <div id="indicator" class="indicator-bar"></div>
+      <a href="#sobreMi">Sobre mí</a>
+      <a href="#hojaDeVida">Hoja de vida</a>
+      <a href="#portafolio">Portafolio</a>
+      <a href="#contactame">Contáctame</a>
+      <div id="indicator" class="indicator-bar"></div>
     </div>
 
     <div class="dark-mode-icon">
-        <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
-        <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
+      <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
+      <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
-</header>
-<body>
-    <section>
-        
-    </section>
+  </header>
+
+  <body>
+    <section></section>
     <script defer src="js/indicator-navbar.js"></script>
-</body>
+  </body>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        
+        <div class="titulos-redirects">
+          <div class="titulos-footer">
+            <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
+            <h3 class="dev-titulo-footer">Desarrollador de software</h3>
+            <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
+          </div>
+
+          <div class="redirects-footer">
+            <a href="#sobreMi">Sobre mí</a>
+            <a href="#hojaDeVida">Hoja de vida</a>
+            <a href="#portafolio">Portafolio</a>
+            <a href="#contactame">Contáctame</a>
+          </div>
+        </div>
+
+        <br/><br>
+
+        <div class="links-contactos">
+          <a
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="correo"
+          >
+            <img src="" alt="correo" class="correo-icon" />
+          </a>
+          <a
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="github"
+          >
+            <img src="" alt="github" class="github-icon" />
+          </a>
+          <a
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="linkedin"
+          >
+            <img src="" alt="linkedin" class="linkedin-icon" />
+          </a>
+          <a
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="telefono"
+          >
+            <img src="" alt="telefono" class="telefono-icon" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
