header almost complete

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </head>
   <header>
     <div class="ingles-icon">
-      <img src="img/espana.png" alt="Español" class="bandera-idioma" />
+      <img src="/img/header/espana.png" alt="Español" class="bandera-idioma" />
       <a href="/redirects/indexRedirect.html">
         <img
-          src="img/idioma.png"
+          src="/img/header/idioma.png"
           alt="Cambiar lenguaje"
           class="change-languaje"
         />
@@ -35,7 +35,7 @@
     </div>
 
     <div class="dark-mode-icon">
-      <img src="img/luna.png" alt="Modo oscuro" class="moon-icon" />
+      <img src="/img/header/luna.png" alt="Modo oscuro" class="moon-icon" />
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
@@ -48,11 +48,14 @@
   <footer>
     <div class="footer-container">
       <div class="footer-content">
-        
         <div class="titulos-redirects">
           <div class="titulos-footer">
             <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
             <h3 class="dev-titulo-footer">Desarrollador de software</h3>
+            <div class="phone-footer">
+              <img src="img/contact/telefono.png" alt="" class="phone-icon"/>
+              <h3 class="phone-number-footer">+57 3022412906</h3>
+            </div>
             <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
           </div>
 
@@ -64,8 +67,6 @@
           </div>
         </div>
 
-        <br/><br>
-
         <div class="links-contactos">
           <a
             href="http://"
@@ -73,31 +74,31 @@
             rel="noopener noreferrer"
             class="correo"
           >
-            <img src="" alt="correo" class="correo-icon" />
+            <img src="img/contact/gmail.png" alt="correo" class="correo-icon" />
           </a>
           <a
-            href="http://"
+            href="https://github.com/JuanRendon1206?tab=repositories"
             target="_blank"
             rel="noopener noreferrer"
             class="github"
           >
-            <img src="" alt="github" class="github-icon" />
+            <img
+              src="/img/contact/github.png"
+              alt="github"
+              class="github-icon"
+            />
           </a>
           <a
-            href="http://"
+            href="https://www.linkedin.com/in/juan-jose-florez-rendon-77658b297/"
             target="_blank"
             rel="noopener noreferrer"
             class="linkedin"
           >
-            <img src="" alt="linkedin" class="linkedin-icon" />
-          </a>
-          <a
-            href="http://"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="telefono"
-          >
-            <img src="" alt="telefono" class="telefono-icon" />
+            <img
+              src="/img/contact/logotipo-de-linkedin.png"
+              alt="linkedin"
+              class="linkedin-icon"
+            />
           </a>
         </div>
       </div>
