--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -16,10 +16,14 @@
   </head>
   <header>
     <div class="ingles-icon">
-      <img src="/img/estados-unidos.png" alt="Ingles" class="bandera-idioma" />
+      <img
+        src="/img/header/estados-unidos.png"
+        alt="Ingles"
+        class="bandera-idioma"
+      />
       <a href="/index.html">
         <img
-          src="/img/idioma.png"
+          src="/img/header/idioma.png"
           alt="Change languaje"
           class="change-languaje"
         />
@@ -37,7 +41,7 @@
     </div>
 
     <div class="dark-mode-icon">
-      <img src="/img/luna.png" alt="Dark Mode" class="moon-icon" />
+      <img src="/img/header/luna.png" alt="Dark Mode" class="moon-icon" />
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
