Footer almost terminated

--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -50,4 +50,64 @@
     <section class="introduccion-container"></section>
     <script defer src="/js/indicator-navbar.js"></script>
   </body>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-content">
+        <div class="titulos-redirects">
+          <div class="titulos-footer">
+            <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
+            <h3 class="dev-titulo-footer">Software Developer</h3>
+            <div class="phone-footer">
+              <img src="/img/contact/telefono.png" alt="" class="phone-icon"/>
+              <h3 class="phone-number-footer">+57 3022412906</h3>
+            </div>
+            <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
+          </div>
+
+          <div class="redirects-footer">
+            <a href="#sobreMi">About me</a>
+            <a href="#hojaDeVida">Curriculum vitae</a>
+            <a href="#portafolio">Portfolio</a>
+            <a href="#contactame">Contact me</a>
+          </div>
+        </div>
+
+        <div class="links-contactos">
+          <a
+            href="http://"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="correo"
+          >
+            <img src="/img/contact/gmail.png" alt="correo" class="correo-icon" />
+          </a>
+          <a
+            href="https://github.com/JuanRendon1206?tab=repositories"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="github"
+          >
+            <img
+              src="/img/contact/github.png"
+              alt="github"
+              class="github-icon"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/juan-jose-florez-rendon-77658b297/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="linkedin"
+          >
+            <img
+              src="/img/contact/logotipo-de-linkedin.png"
+              alt="linkedin"
+              class="linkedin-icon"
+            />
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
