mailto for gmail icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="links-contactos">
           <a
-            href="http://"
+            href="mailto:juanjoseflorezrendon124@gmail.com?subject=Saludos&body=Hola Juan Jose,%20quiero%20contactarte%20por..."
             target="_blank"
             rel="noopener noreferrer"
             class="correo"
