--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -59,7 +59,7 @@
             <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
             <h3 class="dev-titulo-footer">Software Developer</h3>
             <div class="phone-footer">
-              <img src="/img/contact/telefono.png" alt="" class="phone-icon"/>
+              <img src="/img/contact/telefono.png" alt="" class="phone-icon" />
               <h3 class="phone-number-footer">+57 3022412906</h3>
             </div>
             <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
@@ -75,12 +75,16 @@
 
         <div class="links-contactos">
           <a
-            href="http://"
+            href="mailto:juanjoseflorezrendon124@gmail.com?subject=Saludos&body=Hola Juan Jose,%20quiero%20contactarte%20por..."
             target="_blank"
             rel="noopener noreferrer"
             class="correo"
           >
-            <img src="/img/contact/gmail.png" alt="correo" class="correo-icon" />
+            <img
+              src="/img/contact/gmail.png"
+              alt="correo"
+              class="correo-icon"
+            />
           </a>
           <a
             href="https://github.com/JuanRendon1206?tab=repositories"
