--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   </header>
 
   <body>
-    <section></section>
+    <div class="contenedor-principal-body">
+      <section></section>
+    </div>
     <script defer src="js/indicator-navbar.js"></script>
   </body>
 
