--- a/index.html
+++ b/index.html
@@ -41,9 +41,17 @@
   </header>
 
   <body>
-    <div class="contenedor-principal-body">
-      <section></section>
+    <div class="main-container">
+      <section class="sobre_mi_container" id="sobreMi">
+        <div class="sobre_mi_content">
+          <h1>Juan Jose Florez Rendon</h1>
+          <p>
+            <span>Desarrollar fullStack</span>
+          </p>
+        </div>
+      </section>
     </div>
+
     <script defer src="js/indicator-navbar.js"></script>
   </body>
 
@@ -55,7 +63,7 @@
             <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
             <h3 class="dev-titulo-footer">Desarrollador de software</h3>
             <div class="phone-footer">
-              <img src="img/contact/telefono.png" alt="" class="phone-icon"/>
+              <img src="img/contact/telefono.png" alt="" class="phone-icon" />
               <h3 class="phone-number-footer">+57 3022412906</h3>
             </div>
             <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
