--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="nav-links">
       <a href="#sobreMi">Sobre mí</a>
-      <a href="#hojaDeVida">Hoja de vida</a>
+      <a href="#skills">Habilidades</a>
       <a href="#portafolio">Portafolio</a>
       <a href="#contactame">Contáctame</a>
       <div id="indicator" class="indicator-bar"></div>
@@ -44,10 +44,25 @@
     <div class="main-container">
       <section class="sobre_mi_container" id="sobreMi">
         <div class="sobre_mi_content">
-          <h1>Juan Jose Florez Rendon</h1>
+          <h1>Hola! Soy Juan</h1>
           <p>
             <span>Desarrollar fullStack</span>
           </p>
+        </div>
+      </section>
+      <section class="skills-container" id="skills">
+        <div class="skills-content">
+          <h1>Skills</h1>
+        </div>
+      </section>
+      <section class="proyectos-container" id="portafolio">
+        <div class="proyectos-content">
+          <h1>Proyectos</h1>
+        </div>
+      </section>
+      <section class="contactame-container" id="contactame">
+        <div class="contactame-content">
+          <h1>Contactame</h1>
         </div>
       </section>
     </div>
@@ -71,7 +86,7 @@
 
           <div class="redirects-footer">
             <a href="#sobreMi">Sobre mí</a>
-            <a href="#hojaDeVida">Hoja de vida</a>
+            <a href="#skills">Habilidades</a>
             <a href="#portafolio">Portafolio</a>
             <a href="#contactame">Contáctame</a>
           </div>
