descargar cv buttom

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <p>
             <span>Desarrollar fullStack</span>
           </p>
+          <button>Descargar CV</button>
         </div>
       </section>
       <section class="skills-container" id="skills">
