--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <h1>Hola! Soy Juan</h1>
           <p>
             <span>Desarrollar fullStack</span>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis excepturi beatae optio error facere aspernatur ipsum modi reiciendis dolorum minus. Cambiar imagenes a avif o webp y generar imagen de inicio con copilot
           </p>
           <button>Descargar CV</button>
         </div>
