--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="icon" href="img/logo.avif" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,10 +16,10 @@
   </head>
   <header>
     <div class="ingles-icon">
-      <img src="/img/header/espana.png" alt="Español" class="bandera-idioma" />
+      <img src="/img/header/espana.avif" alt="Español" class="bandera-idioma" />
       <a href="/redirects/indexRedirect.html">
         <img
-          src="/img/header/idioma.png"
+          src="/img/header/idioma.avif"
           alt="Cambiar lenguaje"
           class="change-languaje"
         />
@@ -35,7 +35,7 @@
     </div>
 
     <div class="dark-mode-icon">
-      <img src="/img/header/luna.png" alt="Modo oscuro" class="moon-icon" />
+      <img src="/img/header/luna.avif" alt="Modo oscuro" class="moon-icon" />
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
@@ -80,7 +80,7 @@
             <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
             <h3 class="dev-titulo-footer">Desarrollador de software</h3>
             <div class="phone-footer">
-              <img src="img/contact/telefono.png" alt="" class="phone-icon" />
+              <img src="img/contact/telefono.avif" alt="" class="phone-icon" />
               <h3 class="phone-number-footer">+57 3022412906</h3>
             </div>
             <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
@@ -101,7 +101,7 @@
             rel="noopener noreferrer"
             class="correo"
           >
-            <img src="img/contact/gmail.png" alt="correo" class="correo-icon" />
+            <img src="img/contact/gmail.avif" alt="correo" class="correo-icon" />
           </a>
           <a
             href="https://github.com/JuanRendon1206?tab=repositories"
@@ -110,7 +110,7 @@
             class="github"
           >
             <img
-              src="/img/contact/github.png"
+              src="/img/contact/github.avif"
               alt="github"
               class="github-icon"
             />
@@ -122,7 +122,7 @@
             class="linkedin"
           >
             <img
-              src="/img/contact/logotipo-de-linkedin.png"
+              src="/img/contact/logotipo-de-linkedin.avif"
               alt="linkedin"
               class="linkedin-icon"
             />
