--- a/redirects/indexRedirect.html
+++ b/redirects/indexRedirect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="icon" href="/img/logo.png" type="image/x-icon" />
+    <link rel="icon" href="/img/logo.avif" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,13 +17,13 @@
   <header>
     <div class="ingles-icon">
       <img
-        src="/img/header/estados-unidos.png"
+        src="/img/header/estados-unidos.avif"
         alt="Ingles"
         class="bandera-idioma"
       />
       <a href="/index.html">
         <img
-          src="/img/header/idioma.png"
+          src="/img/header/idioma.avif"
           alt="Change languaje"
           class="change-languaje"
         />
@@ -41,7 +41,7 @@
     </div>
 
     <div class="dark-mode-icon">
-      <img src="/img/header/luna.png" alt="Dark Mode" class="moon-icon" />
+      <img src="/img/header/luna.avif" alt="Dark Mode" class="moon-icon" />
       <input type="checkbox" id="darkModeSwitch" class="toggle-switch" />
     </div>
   </header>
@@ -59,7 +59,7 @@
             <h2 class="nombre-footer">Juan Jose F. Rendon</h2>
             <h3 class="dev-titulo-footer">Software Developer</h3>
             <div class="phone-footer">
-              <img src="/img/contact/telefono.png" alt="" class="phone-icon" />
+              <img src="/img/contact/telefono.avif" alt="" class="phone-icon" />
               <h3 class="phone-number-footer">+57 3022412906</h3>
             </div>
             <h3 class="ubicacion-footer">Medellin, Colombia.</h3>
@@ -81,7 +81,7 @@
             class="correo"
           >
             <img
-              src="/img/contact/gmail.png"
+              src="/img/contact/gmail.avif"
               alt="correo"
               class="correo-icon"
             />
@@ -93,7 +93,7 @@
             class="github"
           >
             <img
-              src="/img/contact/github.png"
+              src="/img/contact/github.avif"
               alt="github"
               class="github-icon"
             />
@@ -105,7 +105,7 @@
             class="linkedin"
           >
             <img
-              src="/img/contact/logotipo-de-linkedin.png"
+              src="/img/contact/logotipo-de-linkedin.avif"
               alt="linkedin"
               class="linkedin-icon"
             />
